# OOD_5

./: CMakeLists.txt
diagramm/: .$EditorDiagram.drawio.bkp  .$EditorDiagram.drawio.dtmp  EditorDiagram.drawio
editor/: main.cpp
editor/Menu/: CommandHandler.cpp  CommandHandler.h  Menu.cpp  Menu.h
editor/commands/: ICommand.h
editor/commands/AbstractCommand/: AbstractCommand.cpp  AbstractCommand.h
editor/commands/CompoundCommand/: AbstractUndoable.cpp  AbstractUndoable.h  CompoundCommand.cpp  CompoundCommand.h  IUndoable.cpp  IUndoable.h
editor/commands/DeleteItemCommand/: DeleteItemCommand.cpp  DeleteItemCommand.h
editor/commands/InsertImageCommand/: InsertImageCommand.cpp  InsertImageCommand.h
editor/commands/InsertParagraphCommand/: InsertParagraphCommand.cpp  InsertParagraphCommand.h
editor/commands/ReplaceTextCommand/: ReplaceTextCommand.cpp  ReplaceTextCommand.h
editor/commands/ResizeImageCommand/: ResizeImageCommand.cpp  ResizeImageCommand.h
editor/commands/SaveCommand/: SaveCommand.cpp  SaveCommand.h
editor/commands/SetTitleCommand/: SetTitleCommand.cpp  SetTitleCommand.h
editor/document/: ConstDocumentItem.cpp  ConstDocumentItem.h  Document.cpp  Document.h  DocumentItem.cpp  DocumentItem.h  History.cpp  History.h  IDocument.h  IImage.h  IParagraph.h  Image.cpp  Image.h  Paragraph.cpp  Paragraph.h
editor/tests/: CommandTests.cpp
robot/: Commands.h  MenuFP.h  main.cpp
